# Tier2

Advanced JavaScript and TypeScript/Тема 7. Синтаксис async-await та axios/: index.html  package-lock.json  package.json
Advanced JavaScript and TypeScript/Тема 8. Пагінація/: index.html  package-lock.json  package.json
Advanced JavaScript and TypeScript/Тема 9. Вступ до TypeScript/: addNumber.js  addNumber.ts  person.js
FullStack Web Development with Python/: .env.example  .gitignore  pyproject.toml
FullStack Web Development with Python/Chapter_06/example_alembic/: models.py  pyproject.toml
Fullstack. Back End Development Node.js/Foodies-Backend-main/: app.js  package-lock.json  package.json  render.yaml
Fullstack. Back End Development Node.js/foodies-be-main/: .env.example  .gitignore  .prettierrc.json  README.md  app.js  eslint.config.js  package-lock.json  package.json  swagger.js
Fullstack. Back End Development Node.js/foodies-fe-main/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
JavaScript Fundamentals/Тема 1. Змінні та типи. Основи функції./: index.html
JavaScript Fundamentals/Тема 4. Функції/: Stack frame.js  index.html  test.js  Область видимості.js  Параметри за замовчуванням.js  Перевірка-1.js  Перевірка-2.js  Псевдомасив arguments.js  Стек викликів.js  Функціональний вираз.js
JavaScript Fundamentals/Тести/: index.html  Перевірка-1.js
Mastering Front-End Development with React/travel-trucks-beta-vitelatest/: README.md  (+2 more)
Precourse_HTML_CSS/: .prettierrc.json  index.html
(+2117 files in other folders)
